--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <section class="catalog">
                 <div class="catalog__background">
-                    <video src="img/background/3701515361.mp4" muted loop autoplay="autoplay" class="catalog__page__background"></video>
+                    <video src="img/background/3701515361 (1).mp4" muted loop autoplay="autoplay" class="catalog__page__background"></video>
                 </div>
                 <!-- <img src="img/background/1329110.jpeg" alt="background2" class="catalog__background" > -->
                 
