--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 
             <section class="catalog">
                 <div class="catalog__background">
-                    <video src="img/background/3701515361 (1).mp4" muted loop autoplay="autoplay" class="catalog__page__background"></video>
+                    <video src="img/background/3701515361.mp4" muted loop autoplay="autoplay" class="catalog__page__background"></video>
                 </div>
                 <!-- <img src="img/background/1329110.jpeg" alt="background2" class="catalog__background" > -->
                 
-                 <div class="blur-element1"></div>
-                 <div class="blur-element2"></div>
+                 <!-- <div class="blur-element1"></div>
+                 <div class="blur-element2"></div> -->
                 <div class="container">
                     <div class="catalog__content">
                         <h2 id="tl-catalog-title" class="catalog__content__title animate__animated animate__fadeInLeft wow">Каталог</h2>
